traefik/nginx/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nginx
  namespace: default
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app:  nginx
    spec:
      containers:
      - name:  nginx
        image:  nginx:1.19
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        # env:
        # - name: DB_HOST
        #   valueFrom:
        #     configMapKeyRef:
        #       name: nginx
        #       key: DB_HOST
        ports:
        - containerPort:  80
          name:  nginx
      #   volumeMounts:
      #   - name: localtime
      #     mountPath: /etc/localtime
      # volumes:
      #   - name: localtime
      #     hostPath:
      #       path: /usr/share/zoneinfo/Asia/Shanghai
      affinity: # 将whoami 应用容器角度到 反亲和性，调度到非标签为ingress=treafik的节点上
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution: 
            nodeSelectorTerms:
            - matchExpressions:
              - key: ingress
                operator: NotIn
                values: 
                  - treafik
      restartPolicy: Always
