traefik/nginx/nginx-ingressroutes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-websecure-ingressroutetls
  namespace: default
spec: # https tls
  entryPoints:
    - websecure # traefik-deployments --entrypoints.websecure.Address=:4443
  routes: # www.abcnginx.comurl/tls  www.abcnginx.com/notls/abc whoamiserviceservice8080pod
  - match: Host(`www.abcnginx.com`) || PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: nginx-serivce
      port: 80
  tls: # tls traefik-deployments --certificatesresolvers.myresolver.acme.tlschallenge ...
    certResolver: myresolver
